--- a/src/pages/care-plan/su-create/dependencies.html
+++ b/src/pages/care-plan/su-create/dependencies.html
@@ -8,3 +8,4 @@
 <link rel="import" href="../../../elements/su-header/su-header.html" />
 <link rel="import" href="../../../../bower_components/app-layout/app-grid/app-grid-style.html" />
 <link rel="import" href="../../../../bower_components/iron-media-query/iron-media-query.html" />
+<link rel="import" href="../../../../bower_components/app-storage/app-indexeddb-mirror/app-indexeddb-mirror.html" />
