--- a/src/pages/care-plan/su-profile/dependencies.html
+++ b/src/pages/care-plan/su-profile/dependencies.html
@@ -9,5 +9,6 @@
 <link rel="import" href="../../../../bower_components/vaadin-combo-box/vaadin-combo-box.html" />
 <link rel="import" href="../../../../bower_components/app-layout/app-grid/app-grid-style.html" />
 <link rel="import" href="../../../../bower_components/iron-media-query/iron-media-query.html" />
+<link rel="import" href="../../../../bower_components/app-storage/app-indexeddb-mirror/app-indexeddb-mirror.html" />
 <link rel="import" href="../../../elements/su-header/su-header.html" />
 <link rel="import" href="../../../elements/guuey-date-input/guuey-date-input.html" />
