--- a/src/pages/default/def-home/def-home.html
+++ b/src/pages/default/def-home/def-home.html
@@ -3,13 +3,13 @@
 
   <template>
     <firebase-query
-      id="patientsDB"
-      path="/homes/[[home]]/patients"
+      id="suIndexDB"
+      path="/homes/[[home]]/patients/suIndex"
       data="{{patientListLive}}"
       app-name="main">
     </firebase-query>
     <app-indexeddb-mirror
-      key="patients"
+      key="suIndexDB"
       data="{{patientListLive}}"
       persisted-data="{{patientList}}"
       worker-url="../../../../bower_components/app-storage/app-indexeddb-mirror/app-indexeddb-mirror-worker.js">
@@ -133,36 +133,37 @@
       <div class="app-grid" has-aspect-ratio>
         <template
           is="dom-repeat"
-          items="{{patientList}}"
+          items="[[patientList]]"
           filter="filterArchived"
-          observe="currentStatus">
+          observe="currentStatus"
+          as="su">
 
-            <div hidden="{{!_computeSuspended(item.currentStatus)}}" class=" suBoxWrapper">
+            <div hidden="{{!_computeSuspended(su.currentStatus)}}" class=" suBoxWrapper">
               <paper-card
                 class="suBox"
                 elevation="3">
               <iron-image
                 class="suBoxImage"
                 sizing="cover"
-                preload-image
-                placeholder-image="../../../../images/defaultAvatar.png"
-                fade-image
-                src="{{_computeImage(item.personalProfile.image)}}"
+                preload
+                placeholder="../../../../images/defaultAvatar.png"
+                fade
+                src="{{_computeImage(su.image)}}"
                 on-tap="editServiceUser">
               </iron-image>
                 <p class="suspendedText">
                   suspended
                 </p>
                 <div class="suLower">
-                  {{item.personalProfile.fName}}
+                  [[su.fName]]
                   <br />
-                  {{item.personalProfile.lName}}
+                  [[su.lName]]
                 </div>
                 <paper-icon-button class="suEdit" on-tap="openSuspendedDialog" icon="icons:more-vert"></paper-icon-button>
               </paper-card>
             </div>
 
-            <div hidden="{{_computeSuspended(item.currentStatus)}}" class="suBoxWrapper">
+            <div hidden="{{_computeSuspended(su.currentStatus)}}" class="suBoxWrapper">
               <paper-card
                 class="suBox"
                 elevation="3">
@@ -172,13 +173,13 @@
                   preload-image
                   placeholder-image="../../../../images/defaultAvatar.png"
                   fade-image
-                  src="{{_computeImage(item.personalProfile.image)}}"
+                  src="{{_computeImage(su.image)}}"
                   on-tap="editServiceUser">
                 </iron-image>
                 <div class="suLower">
-                  {{item.personalProfile.fName}}
+                  [[su.fName]]
                   <br />
-                  {{item.personalProfile.lName}}
+                  [[su.lName]]
                 </div>
                 <paper-icon-button class="suEdit" on-tap="openDialog" icon="icons:more-vert"></paper-icon-button>
               </paper-card>
@@ -238,57 +239,57 @@
       },
       openDialog:function(e) {
         this.$.activeDialog.positionTarget = e.target;
-        if(e.model.item.personalProfile && e.model.item.personalProfile){
-          if(e.model.item.personalProfile.fName && e.model.item.personalProfile.lName){
-            this.modalFirstName=e.model.item.personalProfile.fName;
-            this.modalLastName=e.model.item.personalProfile.lName;
+        if(e.model.su && e.model.su){
+          if(e.model.su.fName && e.model.su.lName){
+            this.modalFirstName=e.model.su.fName;
+            this.modalLastName=e.model.su.lName;
           }
         }
-        this.modalKey=e.model.item.$key;
+        this.modalKey=e.model.su.$key;
         this.$.activeDialog.toggle();
       },
       openSuspendedDialog:function(e) {
         this.$.suspendedDialog.positionTarget = e.target;
-        if(e.model.item.personalProfile && e.model.item.personalProfile){
-          if(e.model.item.personalProfile.fName && e.model.item.personalProfile.lName){
-            this.modalFirstName=e.model.item.personalProfile.fName;
-            this.modalLastName=e.model.item.personalProfile.lName;
+        if(e.model.su && e.model.su){
+          if(e.model.su.fName && e.model.su.lName){
+            this.modalFirstName=e.model.su.fName;
+            this.modalLastName=e.model.su.lName;
           }
         }
-        this.modalKey=e.model.item.$key;
+        this.modalKey=e.model.su.$key;
         this.$.suspendedDialog.toggle();
       },
       editServiceUser:function(e){
         if(e.model){
-          window.location.href="/"+this.home+"/care-plan/su-profile/"+e.model.item.$key;
+          window.location.href="/"+this.home+"/care-plan/su-profile/"+e.model.su.$key;
         } else {
           window.location.href="/"+this.home+"/care-plan/su-profile/"+this.modalKey;
         };
       },
       suspendServiceUser:function(e){
-        var path=this.$.patientsDB.path+"/"+this.modalKey+"/currentStatus";
-        this.$.patientsDB.setStoredValue(path, "suspended");
+        var path=this.$.suIndexDB.path+"/"+this.modalKey+"/currentStatus";
+        this.$.suIndexDB.setStoredValue(path, "suspended");
         this.$.activeDialog.toggle();
       },
       unSuspendServiceUser:function(e){
-        var path=this.$.patientsDB.path+"/"+this.modalKey+"/currentStatus";
-        this.$.patientsDB.setStoredValue(path, "active");
+        var path=this.$.suIndexDB.path+"/"+this.modalKey+"/currentStatus";
+        this.$.suIndexDB.setStoredValue(path, "active");
         this.$.suspendedDialog.toggle();
       },
       archiveUser:function(e){
-        var path=this.$.patientsDB.path+"/"+this.modalKey+"/currentStatus";
-        this.$.patientsDB.setStoredValue(path, "archived");
+        var path=this.$.suIndexDB.path+"/"+this.modalKey+"/currentStatus";
+        this.$.suIndexDB.setStoredValue(path, "archived");
         this.$.activeDialog.toggle();
       },
-      filterArchived:function(item){
-        return item.currentStatus!=="archived";
+      filterArchived:function(su){
+        return su.currentStatus!=="archived";
       },
       //check to see if the remaining non archived service users are suspended or not
       _computeSuspended:function(status){
         return status=="suspended";
       },
-      _computeQueryCount:function(item){
-        if(item.currentStatus!="archived"){
+      _computeQueryCount:function(su){
+        if(su.currentStatus!="archived"){
           if(!this.queryCount){
             this.queryCount=0;
           };
@@ -303,7 +304,7 @@
         };
       },
       dbLoaded:function(data){
-        this.$.patientsDB.query.on("value", function(){
+        this.$.suIndexDB.query.on("value", function(){
             this.fire("dbLoaded");
         }.bind(this));
       },
